den1-k8s01/warehouse20/radarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: radarr
    app.kubernetes.io/instance: radarr
  name: radarr
  namespace: warehouse20
  annotations:
    fluxcd.io/tag.exportarr: 'semver: > 0.3.0'
    fluxcd.io/tag.radarr: 'glob:version-3.*'
    fluxcd.io/automated: 'false'
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: radarr
      app.kubernetes.io/instance: radarr
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: radarr
        app.kubernetes.io/instance: radarr
    spec:
      automountServiceAccountToken: false
      containers:
      - name: radarr
        image: linuxserver/radarr:3.0.0.3978-ls26
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 7878
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: http
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: http
        resources:
          requests:
            cpu: 500m
            memory: 512Mi
          limits:
            cpu: 2000m
            memory: 2Gi
        # securityContext:
        #   runAsUser: 1024
        #   runAsGroup: 100
        volumeMounts:
        - mountPath: /config
          name: config
          subPath: config
        - mountPath: /mnt/media/store01
          name: media
      - name: exportarr
        image: onedr0p/exportarr:v0.3.4
        command: ["exportarr"]
        args: ["radarr"]
        ports:
        - name: monitoring
          containerPort: 9707
        livenessProbe:
          httpGet:
            path: /healthz
            port: monitoring
          failureThreshold: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /healthz
            port: monitoring
          failureThreshold: 5
          periodSeconds: 10
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 500m
            memory: 256Mi
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: radarr-data
      - name: media
        persistentVolumeClaim:
          claimName: media-store01
