den1-k8s01/warehouse20/radarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: warehouse20
  labels:
    app: radarr
spec:
  type: ClusterIP
  ports:
    - name: http
      targetPort: http
      port: 7878
      protocol: TCP
  selector:
    app: radarr
