den1-k8s01/warehouse20/radarr/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: radarr
  namespace: warehouse20
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: radarr
      app.kubernetes.io/instance: radarr
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: ombi
    - podSelector:
        matchLabels:
          app: organizr
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: traktarr
          app.kubernetes.io/instance: traktarr
    - podSelector:
        matchLabels:
          app: varken
    - namespaceSelector:
        matchLabels:
          app: ingress-public
    ports:
    - protocol: TCP
      port: http
  - from:
    - namespaceSelector:
        matchLabels:
          app: monitoring
    ports:
    - protocol: TCP
      port: monitoring
